	* Prevent NoteEdit from crashing when calling New document when playing. R297
	* MusicXML import - fill with hidden rests in second staff as well. R299
	* Selection button and note buttons splitted. First step towards separate Insert/Edit/Selection modes. R300, R306
	* Don't select the next element when using Backspace to delete and the beginning of the score is reached. R301
	* New keyboard binding ESC - leaves current mode. Changed many keyboard bindings:
		- End -> E: Edit mode
		- Alt-Right, Alt-Left -> Home, End: Move at the beginning of the document, move at the end of document
		- Insert -> SHIFT+Return: Insert rest
		- CTRL+Backspace -> CTRL+Delete: Delete a note in chord
		- E -> SHIFT+E: Pitch E
	* Page layout editor no longer removes brace if placing a bracket around it. You're also no longer able to place a bracket on a single staff. R303
	* Updated bracket/brace layout and fixed some spacings. A new measureline connecting all the staffs at the beginning is now present. R304
	* Added CTRL+number_key bindings for selecting a voice number. If a key is hitted the second time, voice A is selected. Changed Key_QuoteLeft with Key_Apostrophe for placing a tie. R305
	* Fixed a refresh bug in Edit mode. Experimental - Edit mode needs testing. R306, R309, R310
	* Added red border around the notePart when in Edit mode. R307
	* R308:
	  - selectButton_ -> selectbutton_,
	  - setToSelect() -> setSelectMode(),
	  - some refresh stuff when switching between edit mode and select mode in various ways.
	* R311:
	  - Grace notes are now correctly chosen in Edit mode.
	  - Some code moved and optimized when updating elements in Edit mode.
	  - stateButtonChange(int state, int state2) -> updateInterface(int state, int state2, int length).
	  - slots for grace note buttons changed from setToTN8() -> setToGN8() and similar. Probably T was from "tiny", but musicians use an expression grace note for these kind of notes, so G.